V0.11 -- Fix overflowing service card images

--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -101,6 +101,7 @@
 .service-img {
     border-radius: 10px 10px 0 0;
     height: 250px;
+    max-width: 100%;
 }
 
 .service-text {
